--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 class="welcome-title">¡Bienvenidos!</h1>
-    <p class="description-text">En esta pagina poras generar tarjetas de credito de forma 100% afirmativas,</p>
+    <p class="description-text">En esta pagina podras generar tarjetas de credito de forma 100% afirmativas,</p>
     <p class="credit-cards-text">Tarjetas de crédito</p>
     <div class="button-container">
         <button class="generate-button mastercard-button" id="mastercard-button">Generar tarjeta MasterCard</button>
