--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>Descubre nuestra nueva remera de edición limitada. Estilo y calidad que se destacan.</p>
             </div>
             <div class="right-content">
-                <img src="file:///C:/Users/66666/Desktop/cantina%20pagina/ezgif-7-66e2bda81b.gif" alt="GIF de remera">
+                <img src="https://raw.githubusercontent.com/KLKTheRAb/web/refs/heads/main/ezgif-7-66e2bda81b.gif" alt="GIF de remera">
             </div>
         </div>
         
