--- a/index.html
+++ b/index.html
@@ -3,56 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jagged Fast - Tienda</title>
+    <title>Cooperativa Agropecuaria</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Barra de navegación fija -->
-    <header class="fixed-nav">
-        <div class="logo">
-            <h1>Jagged Fast</h1>
-        </div>
+    <header>
+        <h1>Cooperativa Agropecuaria</h1>
         <nav>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Producto</a></li>
-                <li><a href="#about-us">Sobre nosotros</a></li>
-                <li><a href="#purchase-info">Información de compra</a></li>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#historia">Historia</a></li>
+                <li><a href="#mision-vision">Misión y Visión</a></li>
+                <li><a href="#productos">Productos y Servicios</a></li>
+                <li><a href="#noticias">Noticias</a></li>
+                <li><a href="#publicaciones">Publicaciones</a></li>
+                <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
 
-    <div class="container">
-        <!-- Bloque inferior con contenido principal -->
-        <div class="bottom-section">
-            <div class="left-content">
-                <p>Descubre nuestra nueva remera de edición limitada. Estilo y calidad que se destacan.</p>
-            </div>
-            <div class="right-content">
-                <img src="https://raw.githubusercontent.com/KLKTheRAb/web/refs/heads/main/ezgif-7-66e2bda81b.gif" alt="GIF de remera">
-            </div>
-        </div>
-        
-        <!-- Sección de Información de Compra -->
-        <section id="purchase-info">
-            <h2>Información de Compra</h2>
-            <ul>
-                <li>Selecciona tu talla y color.</li>
-                <li>Visítanos en Instagram para más detalles.</li>
-                <li>Contáctanos para recibir atención personalizada.</li>
-            </ul>
-            <p>¿Preguntas? Escríbenos a <a href="mailto:JaggedFast@hotmail.com">JaggedFast@hotmail.com</a> o <a href="https://www.instagram.com/jagged_fast/" target="blue" rel="noopener noreferrer">Instagram</a></p>
-        </section>
+    <section id="inicio">
+        <h2>Bienvenidos a la Cooperativa Agropecuaria</h2>
+        <p>Somos una cooperativa comprometida con el desarrollo sostenible y el bienestar de nuestros socios y la comunidad. Acompáñanos en este recorrido y conoce más sobre nuestro trabajo y servicios.</p>
+    </section>
 
-        <!-- Sección "Sobre Nosotros" -->
-        <section id="about-us">
-            <h2>Sobre Nosotros</h2>
-            <p>Jagged Fast ofrece ropa de alta calidad y estilo para jóvenes y adultos, innovando en cada pieza.</p>
-        </section>
-    </div>
+    <section id="historia">
+        <h2>Nuestra Historia</h2>
+        <p>La cooperativa fue fundada en [año] con el propósito de apoyar a los agricultores locales. Desde entonces, hemos crecido y expandido nuestras operaciones, siempre enfocados en el desarrollo rural y la sostenibilidad.</p>
+        <p>Con los años, hemos adaptado nuestras prácticas para responder a los desafíos del sector y seguir brindando apoyo integral a nuestros miembros.</p>
+    </section>
+
+    <section id="mision-vision">
+        <h2>Misión y Visión</h2>
+        <p><strong>Misión:</strong> Promover el desarrollo agropecuario y fortalecer la economía de nuestros socios.</p>
+        <p><strong>Visión:</strong> Ser reconocidos como líderes en la producción sostenible y la colaboración comunitaria.</p>
+        <h3>Valores</h3>
+        <ul>
+            <li>Compromiso</li>
+            <li>Transparencia</li>
+            <li>Trabajo en equipo</li>
+            <li>Sostenibilidad</li>
+        </ul>
+    </section>
+
+    <section id="productos">
+        <h2>Productos y Servicios</h2>
+        <p>Ofrecemos productos de alta calidad, incluyendo frutas, vegetales, y granos, además de asesoramiento en producción agrícola y servicios de logística.</p>
+    </section>
+
+    <section id="noticias">
+        <h2>Noticias y Novedades</h2>
+        <article>
+            <h3>Título de Noticia 1</h3>
+            <p>Fecha: [Fecha de la noticia]</p>
+            <p>Descripción breve de la noticia, evento o logro.</p>
+        </article>
+        <article>
+            <h3>Título de Noticia 2</h3>
+            <p>Fecha: [Fecha de la noticia]</p>
+            <p>Descripción breve de la noticia, evento o logro.</p>
+        </article>
+    </section>
+
+    <section id="publicaciones">
+        <h2>Publicaciones</h2>
+        <p>Artículos, estudios y documentos relacionados con la agricultura y las prácticas sostenibles en los que hemos colaborado.</p>
+    </section>
+
+    <section id="contacto">
+        <h2>Contacto</h2>
+        <form>
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="mensaje">Mensaje:</label>
+            <textarea id="mensaje" name="mensaje" required></textarea>
+            <button type="submit">Enviar</button>
+        </form>
+        <p>Ubicación: Calle Falsa 123, Ciudad, País</p>
+    </section>
 
     <footer>
-        <p>© 2024 Jagged Fast. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Cooperativa Agropecuaria. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
