--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section id="historia">
         <h2>Nuestra Historia</h2>
-        <p>La cooperativa fue fundada en [año] con el propósito de apoyar a los agricultores locales. Desde entonces, hemos crecido y expandido nuestras operaciones, siempre enfocados en el desarrollo rural y la sostenibilidad.</p>
+        <p>La cooperativa fue fundada en 1858 con el propósito de apoyar a los agricultores locales. Desde entonces, hemos crecido y expandido nuestras operaciones, siempre enfocados en el desarrollo rural y la sostenibilidad.</p>
         <p>Con los años, hemos adaptado nuestras prácticas para responder a los desafíos del sector y seguir brindando apoyo integral a nuestros miembros.</p>
     </section>
 
@@ -81,7 +81,7 @@
             <textarea id="mensaje" name="mensaje" required></textarea>
             <button type="submit">Enviar</button>
         </form>
-        <p>Ubicación: Calle Falsa 123, Ciudad, País</p>
+      
     </section>
 
     <footer>
